force-app/main/default/objects/CoIT_Expense_Type_Selection_Rule__c/CoIT_Expense_Type_Selection_Rule__c.object-meta.xml
<CustomObject>
    <label>Expense Type Selection Rule</label>
    <nameField>
        <displayFormat>E-{0000000}</displayFormat>
        <label>Expense Type Selection Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses Type Selection Rule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>