force-app/main/default/objects/CoIT_Expense_Type_Selection_Rule__c/fields/CoIT_ExpenseType_Id__c.field-meta.xml
<CustomField>
    <fullName>CoIT_ExpenseType_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Type</label>
    <referenceTo>CoIT_Expense_Type__c</referenceTo>
    <relationshipLabel>Expenses Type Selection Rule</relationshipLabel>
    <relationshipName>Expenses_Type_Selection_Rule</relationshipName>
    <type>Lookup</type>
</CustomField>