force-app/main/default/objects/CoIT_Expense_Type_Selection_Rule__c/fields/CoIT_ExpenseTypeName__c.field-meta.xml
<CustomField>
    <fullName>CoIT_ExpenseTypeName__c</fullName>
    <formula>CoIT_ExpenseType_Id__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Type Name</label>
    <type>Text</type>
</CustomField>