force-app/main/default/objects/CoIT_Expense_Type_Selection_Rule__c/fields/CoIT_ExpenseTypeSIABId__c.field-meta.xml
<CustomField>
    <fullName>CoIT_ExpenseTypeSIABId__c</fullName>
    <formula>CoIT_ExpenseType_Id__r.CoIT_External_SIAB_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Type SIAB Id</label>
    <type>Text</type>
</CustomField>