force-app/main/default/objects/CoIT_Expense_Type_Selection_Rule__c/fields/Work_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Work_Type_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Expenses Type Selection Rule</relationshipLabel>
    <relationshipName>Expenses_Type_Selection_Rule</relationshipName>
    <type>Lookup</type>
</CustomField>