force-app/main/default/objects/CoIT_Expense_Type_Selection_Rule__c/listViews/Expenses_Type_Selection_Rule.listView-meta.xml
<ListView>
    <fullName>Expenses_Type_Selection_Rule</fullName>
    <columns>NAME</columns>
    <columns>CoIT_ExpenseType_Id__c</columns>
    <columns>CoIT_ExpenseTypeName__c</columns>
    <columns>Work_Type_Id__c</columns>
    <filterScope>Mine</filterScope>
    <label>Expenses Type Selection Rule</label>
</ListView>